--- a/index.html
+++ b/index.html
@@ -395,51 +395,53 @@
 
     <section>
       <div class="container">
-        <form class="row g-3 mb-5 needs-validation" novalidate>
+        <form class="row g-3 needs-validation" novalidate>
           <div class="col-md-4">
-            <label for="validationCustom01" class="form-label">First name</label>
-            <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+            <label for="firstName" class="form-label">First name</label>
+            <input type="text" class="form-control" id="firstName" value="AR" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-4">
-            <label for="validationCustom02" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+            <label for="lastName" class="form-label">Last name</label>
+            <input type="text" class="form-control" id="lastName" value="Rasel" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-4">
-            <label for="validationCustomUsername" class="form-label">Username</label>
+            <label for="userName" class="form-label">Username</label>
             <div class="input-group has-validation">
               <span class="input-group-text" id="inputGroupPrepend">@</span>
-              <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+              <input type="text" class="form-control" id="userName" aria-describedby="inputGroupPrepend" required>
               <div class="invalid-feedback">
                 Please choose a username.
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <label for="validationCustom03" class="form-label">City</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
+            <label for="cityName" class="form-label">City</label>
+            <input type="text" class="form-control" id="cityName" required>
             <div class="invalid-feedback">
               Please provide a valid city.
             </div>
           </div>
           <div class="col-md-3">
-            <label for="validationCustom04" class="form-label">State</label>
-            <select class="form-select" id="validationCustom04" required>
+            <label for="stateName" class="form-label">State</label>
+            <select class="form-select" id="stateName" required>
               <option selected disabled value="">Choose...</option>
-              <option>...</option>
+              <option>Banani</option>
+              <option>Mirpur</option>
+              <option>Shyamoli</option>
             </select>
             <div class="invalid-feedback">
               Please select a valid state.
             </div>
           </div>
           <div class="col-md-3">
-            <label for="validationCustom05" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="validationCustom05" required>
+            <label for="zipCode" class="form-label">Zip</label>
+            <input type="text" class="form-control" id="zipCode" required>
             <div class="invalid-feedback">
               Please provide a valid zip.
             </div>
